# EquityLens-Student-Success-Equity-Cohort-Intelligence-Platform

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: extraction_map.yml  institution_map.yml  sources.yml
docs/: assumptions.md  calibration_targets.md  fairness_assessment.md  ingestion_foundation.md  initiative_evaluation.md  model_design.md  model_results.md  schema.md  source_resolution.md  triage_policy_analysis.md
queries/: sanity_checks.sql
scripts/: plot_auc_vs_decision_point.py  report_phase4_metrics.py  report_phase4d_triage.py  report_phase4e_initiatives.py
src/equitylens_calibration/: cli.py  errors.py  models.py  targets.py
src/equitylens_ingestion/: __init__.py  __main__.py  cli.py  downloader.py  errors.py  inventory.py  logging.py  manifest.py  models.py  registry.py  service.py  validation.py
src/equitylens_normalization/: cli.py  errors.py  extraction_map.py  institution_map.py  models.py  reconciliation.py  warehouse.py
src/equitylens_normalization/normalizers/: _shared.py  abs_seifa.py  doe_s11.py  doe_s15.py  doe_s16.py  doe_s17.py  qilt_ses.py
src/equitylens_normalization/readers/: grid_reader.py
src/equitylens_risk/: features.py  initiatives.py  models.py  pipeline.py  triage.py
src/equitylens_synthetic/: cli.py  errors.py  models.py  outcomes.py  population.py  raking.py  validate.py
tests/: conftest.py  test_abs_seifa.py  test_calibration_targets.py  test_cli.py  test_doe_s11.py  test_doe_s15.py  test_doe_s16.py  test_doe_s17.py  test_downloader.py  test_extraction_map.py  test_grid_reader.py  test_institution_map.py  test_inventory.py  test_normalization_cli.py  test_normalization_shared.py  test_outcomes.py  test_population.py  test_qilt_ses.py  test_raking.py  test_reconciliation.py  test_registry.py  test_risk_features.py  test_risk_initiatives.py  test_risk_models.py  test_risk_pipeline.py  test_risk_triage.py  test_service.py  test_synthetic_cli.py  test_validate.py  test_validation.py  test_warehouse.py
