[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "equitylens-ingestion"
version = "0.1.0"
description = "Governed, immutable ingestion gateway for EquityLens public data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "EquityLens contributors" }]
dependencies = [
  "httpx>=0.27,<1",
  "openpyxl>=3.1,<4",
  "PyYAML>=6.0,<7",
  "xlrd>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "respx>=0.21,<1",
  "ruff>=0.9,<1",
]

[project.scripts]
equitylens-ingest = "equitylens_ingestion.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/equitylens_ingestion"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=equitylens_ingestion --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
